Change dynamic enum and flag gtype creation to use namespaced naming

Use the combination of g_base_info_get_namespace and g_base_info_get_name
as the name for registering enum and flag types with glib through
g_enum_register_static and g_flags_register_static. This avoids conflicts
with types like GLib.SeekType and Gst.SeekType. Add better exceptions
and memory cleanup for invalid registration problems.

https://bugzilla.gnome.org/show_bug.cgi?id=690455